parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> prog1 prog2 MAIN LPAREN RPAREN LCURLY block RCURLY
Rule 2     prog1 -> dec_vars
Rule 3     prog1 -> empty
Rule 4     prog2 -> function prog2
Rule 5     prog2 -> empty
Rule 6     dec_vars -> VAR dec_vars1
Rule 7     dec_vars1 -> smp_type ID LBRACKET exp RBRACKET dec_vars3 SEMICOL dec_vars4
Rule 8     dec_vars1 -> smp_type ID dec_vars2 SEMICOL dec_vars4
Rule 9     dec_vars1 -> sp_type ID dec_vars2 SEMICOL dec_vars4
Rule 10    dec_vars2 -> COMMA ID dec_vars2
Rule 11    dec_vars2 -> empty
Rule 12    dec_vars3 -> LBRACKET exp RBRACKET
Rule 13    dec_vars3 -> empty
Rule 14    dec_vars4 -> dec_vars
Rule 15    dec_vars4 -> empty
Rule 16    smp_type -> INT
Rule 17    smp_type -> FLOAT
Rule 18    smp_type -> CHAR
Rule 19    sp_type -> FILE
Rule 20    function -> FUNC ID LPAREN param RPAREN ARROW smp_type LCURLY function1 block RETURN exp SEMICOL RCURLY
Rule 21    function -> FUNC ID LPAREN param RPAREN ARROW VOID LCURLY function1 block RCURLY
Rule 22    function1 -> dec_vars
Rule 23    function1 -> empty
Rule 24    param -> smp_type ID param1
Rule 25    param -> empty
Rule 26    param1 -> COMMA smp_type ID param1
Rule 27    param1 -> empty
Rule 28    block -> statement block
Rule 29    block -> empty
Rule 30    variable -> ID variable1
Rule 31    variable1 -> LBRACKET exp RBRACKET variable2
Rule 32    variable1 -> empty
Rule 33    variable2 -> LBRACKET exp RBRACKET
Rule 34    variable2 -> empty
Rule 35    statement -> assignment
Rule 36    statement -> c_input
Rule 37    statement -> c_print
Rule 38    statement -> condition
Rule 39    statement -> for_loop
Rule 40    statement -> while_loop
Rule 41    statement -> std_func
Rule 42    statement -> sp_func
Rule 43    assignment -> variable EQUAL assignment1 SEMICOL
Rule 44    assignment1 -> exp
Rule 45    assignment1 -> sp_func
Rule 46    c_input -> INPUT variable c_input1 SEMICOL
Rule 47    c_input1 -> COMMA variable c_input1
Rule 48    c_input1 -> empty
Rule 49    c_print -> PRINT LPAREN c_print1 RPAREN SEMICOL
Rule 50    c_print1 -> exp c_print2
Rule 51    c_print1 -> CTE_CHAR c_print2
Rule 52    c_print2 -> COMMA c_print1
Rule 53    c_print2 -> empty
Rule 54    condition -> IF LPAREN exp RPAREN LCURLY block RCURLY condition1
Rule 55    condition1 -> ELSE LCURLY block RCURLY
Rule 56    condition1 -> empty
Rule 57    for_loop -> FOR ID IN RANGE LPAREN exp COMMA exp RPAREN LCURLY block RCURLY
Rule 58    while_loop -> WHILE LPAREN exp RPAREN LCURLY block RCURLY
Rule 59    std_func -> ID LPAREN std_func1 RPAREN
Rule 60    std_func1 -> exp std_func2
Rule 61    std_func1 -> empty
Rule 62    std_func2 -> COMMA exp std_func2
Rule 63    std_func2 -> empty
Rule 64    sp_func -> generate_key_func
Rule 65    sp_func -> file_func
Rule 66    sp_func -> crypto_func
Rule 67    file_func -> open_file
Rule 68    file_func -> read_file
Rule 69    file_func -> write_file
Rule 70    file_func -> close_file
Rule 71    crypto_func -> encrypt_func
Rule 72    crypto_func -> decrypt_func
Rule 73    crypto_func -> hash_sha256
Rule 74    crypto_func -> hash_md5
Rule 75    generate_key_func -> GENERATE_KEY LPAREN RPAREN
Rule 76    open_file -> OPEN LPAREN CTE_CHAR RPAREN
Rule 77    read_file -> READ LPAREN ID RPAREN
Rule 78    write_file -> WRITE LPAREN CTE_CHAR ID RPAREN
Rule 79    close_file -> CLOSE LPAREN ID RPAREN
Rule 80    encrypt_func -> ENCRYPT LPAREN encrypt_func1 COMMA ID RPAREN
Rule 81    encrypt_func1 -> CTE_CHAR
Rule 82    encrypt_func1 -> ID
Rule 83    decrypt_func -> DECRYPT LPAREN decrypt_func1 COMMA ID RPAREN
Rule 84    decrypt_func1 -> CTE_CHAR
Rule 85    decrypt_func1 -> ID
Rule 86    hash_sha256 -> HASH_SHA256 LPAREN hash_sha2561 RPAREN
Rule 87    hash_sha2561 -> CTE_CHAR
Rule 88    hash_sha2561 -> ID
Rule 89    hash_md5 -> HASH_MD5 LPAREN hash_md51 RPAREN
Rule 90    hash_md51 -> CTE_CHAR
Rule 91    hash_md51 -> ID
Rule 92    exp -> t_exp exp1
Rule 93    exp1 -> OR exp
Rule 94    exp1 -> empty
Rule 95    t_exp -> g_exp t_exp1
Rule 96    t_exp1 -> AND t_exp
Rule 97    t_exp1 -> empty
Rule 98    g_exp -> m_exp g_exp1
Rule 99    g_exp1 -> GT m_exp
Rule 100   g_exp1 -> LT m_exp
Rule 101   g_exp1 -> GE m_exp
Rule 102   g_exp1 -> LE m_exp
Rule 103   g_exp1 -> EQ m_exp
Rule 104   g_exp1 -> NE m_exp
Rule 105   g_exp1 -> empty
Rule 106   m_exp -> term m_exp1
Rule 107   m_exp1 -> PLUS m_exp
Rule 108   m_exp1 -> MINUS m_exp
Rule 109   m_exp1 -> empty
Rule 110   term -> factor term1
Rule 111   term1 -> TIMES term
Rule 112   term1 -> DIVIDE term
Rule 113   term1 -> empty
Rule 114   factor -> LPAREN exp RPAREN
Rule 115   factor -> variable
Rule 116   factor -> std_func
Rule 117   factor -> CTE_INT
Rule 118   factor -> CTE_FLOAT
Rule 119   empty -> <empty>

Terminals, with rules where they appear

AND                  : 96
ARROW                : 20 21
CHAR                 : 18
CLOSE                : 79
COMMA                : 10 26 47 52 57 62 80 83
CTE_CHAR             : 51 76 78 81 84 87 90
CTE_FLOAT            : 118
CTE_INT              : 117
DECRYPT              : 83
DIVIDE               : 112
ELSE                 : 55
ENCRYPT              : 80
EQ                   : 103
EQUAL                : 43
FILE                 : 19
FLOAT                : 17
FOR                  : 57
FUNC                 : 20 21
GE                   : 101
GENERATE_KEY         : 75
GT                   : 99
HASH_MD5             : 89
HASH_SHA256          : 86
ID                   : 7 8 9 10 20 21 24 26 30 57 59 77 78 79 80 82 83 85 88 91
IF                   : 54
IN                   : 57
INPUT                : 46
INT                  : 16
LBRACKET             : 7 12 31 33
LCURLY               : 1 20 21 54 55 57 58
LE                   : 102
LPAREN               : 1 20 21 49 54 57 58 59 75 76 77 78 79 80 83 86 89 114
LT                   : 100
MAIN                 : 1
MINUS                : 108
NE                   : 104
OPEN                 : 76
OR                   : 93
PLUS                 : 107
PRINT                : 49
RANGE                : 57
RBRACKET             : 7 12 31 33
RCURLY               : 1 20 21 54 55 57 58
READ                 : 77
RETURN               : 20
RPAREN               : 1 20 21 49 54 57 58 59 75 76 77 78 79 80 83 86 89 114
SEMICOL              : 7 8 9 20 43 46 49
TIMES                : 111
VAR                  : 6
VOID                 : 21
WHILE                : 58
WRITE                : 78
error                : 

Nonterminals, with rules where they appear

assignment           : 35
assignment1          : 43
block                : 1 20 21 28 54 55 57 58
c_input              : 36
c_input1             : 46 47
c_print              : 37
c_print1             : 49 52
c_print2             : 50 51
close_file           : 70
condition            : 38
condition1           : 54
crypto_func          : 66
dec_vars             : 2 14 22
dec_vars1            : 6
dec_vars2            : 8 9 10
dec_vars3            : 7
dec_vars4            : 7 8 9
decrypt_func         : 72
decrypt_func1        : 83
empty                : 3 5 11 13 15 23 25 27 29 32 34 48 53 56 61 63 94 97 105 109 113
encrypt_func         : 71
encrypt_func1        : 80
exp                  : 7 12 20 31 33 44 50 54 57 57 58 60 62 93 114
exp1                 : 92
factor               : 110
file_func            : 65
for_loop             : 39
function             : 4
function1            : 20 21
g_exp                : 95
g_exp1               : 98
generate_key_func    : 64
hash_md5             : 74
hash_md51            : 89
hash_sha256          : 73
hash_sha2561         : 86
m_exp                : 98 99 100 101 102 103 104 107 108
m_exp1               : 106
open_file            : 67
param                : 20 21
param1               : 24 26
prog                 : 0
prog1                : 1
prog2                : 1 4
read_file            : 68
smp_type             : 7 8 20 24 26
sp_func              : 42 45
sp_type              : 9
statement            : 28
std_func             : 41 116
std_func1            : 59
std_func2            : 60 62
t_exp                : 92 96
t_exp1               : 95
term                 : 106 111 112
term1                : 110
variable             : 43 46 47 115
variable1            : 30
variable2            : 31
while_loop           : 40
write_file           : 69

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . prog1 prog2 MAIN LPAREN RPAREN LCURLY block RCURLY
    (2) prog1 -> . dec_vars
    (3) prog1 -> . empty
    (6) dec_vars -> . VAR dec_vars1
    (119) empty -> .

    VAR             shift and go to state 5
    FUNC            reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)

    prog                           shift and go to state 1
    prog1                          shift and go to state 2
    dec_vars                       shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> prog .



state 2

    (1) prog -> prog1 . prog2 MAIN LPAREN RPAREN LCURLY block RCURLY
    (4) prog2 -> . function prog2
    (5) prog2 -> . empty
    (20) function -> . FUNC ID LPAREN param RPAREN ARROW smp_type LCURLY function1 block RETURN exp SEMICOL RCURLY
    (21) function -> . FUNC ID LPAREN param RPAREN ARROW VOID LCURLY function1 block RCURLY
    (119) empty -> .

    FUNC            shift and go to state 9
    MAIN            reduce using rule 119 (empty -> .)

    prog2                          shift and go to state 6
    function                       shift and go to state 7
    empty                          shift and go to state 8

state 3

    (2) prog1 -> dec_vars .

    FUNC            reduce using rule 2 (prog1 -> dec_vars .)
    MAIN            reduce using rule 2 (prog1 -> dec_vars .)


state 4

    (3) prog1 -> empty .

    FUNC            reduce using rule 3 (prog1 -> empty .)
    MAIN            reduce using rule 3 (prog1 -> empty .)


state 5

    (6) dec_vars -> VAR . dec_vars1
    (7) dec_vars1 -> . smp_type ID LBRACKET exp RBRACKET dec_vars3 SEMICOL dec_vars4
    (8) dec_vars1 -> . smp_type ID dec_vars2 SEMICOL dec_vars4
    (9) dec_vars1 -> . sp_type ID dec_vars2 SEMICOL dec_vars4
    (16) smp_type -> . INT
    (17) smp_type -> . FLOAT
    (18) smp_type -> . CHAR
    (19) sp_type -> . FILE

    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15
    FILE            shift and go to state 16

    dec_vars1                      shift and go to state 10
    smp_type                       shift and go to state 11
    sp_type                        shift and go to state 12

state 6

    (1) prog -> prog1 prog2 . MAIN LPAREN RPAREN LCURLY block RCURLY

    MAIN            shift and go to state 17


state 7

    (4) prog2 -> function . prog2
    (4) prog2 -> . function prog2
    (5) prog2 -> . empty
    (20) function -> . FUNC ID LPAREN param RPAREN ARROW smp_type LCURLY function1 block RETURN exp SEMICOL RCURLY
    (21) function -> . FUNC ID LPAREN param RPAREN ARROW VOID LCURLY function1 block RCURLY
    (119) empty -> .

    FUNC            shift and go to state 9
    MAIN            reduce using rule 119 (empty -> .)

    function                       shift and go to state 7
    prog2                          shift and go to state 18
    empty                          shift and go to state 8

state 8

    (5) prog2 -> empty .

    MAIN            reduce using rule 5 (prog2 -> empty .)


state 9

    (20) function -> FUNC . ID LPAREN param RPAREN ARROW smp_type LCURLY function1 block RETURN exp SEMICOL RCURLY
    (21) function -> FUNC . ID LPAREN param RPAREN ARROW VOID LCURLY function1 block RCURLY

    ID              shift and go to state 19


state 10

    (6) dec_vars -> VAR dec_vars1 .

    FUNC            reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    MAIN            reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    INPUT           reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    PRINT           reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    IF              reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    FOR             reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    WHILE           reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    ID              reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    GENERATE_KEY    reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    OPEN            reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    READ            reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    WRITE           reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    CLOSE           reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    ENCRYPT         reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    DECRYPT         reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    HASH_SHA256     reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    HASH_MD5        reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    RETURN          reduce using rule 6 (dec_vars -> VAR dec_vars1 .)
    RCURLY          reduce using rule 6 (dec_vars -> VAR dec_vars1 .)


state 11

    (7) dec_vars1 -> smp_type . ID LBRACKET exp RBRACKET dec_vars3 SEMICOL dec_vars4
    (8) dec_vars1 -> smp_type . ID dec_vars2 SEMICOL dec_vars4

    ID              shift and go to state 20


state 12

    (9) dec_vars1 -> sp_type . ID dec_vars2 SEMICOL dec_vars4

    ID              shift and go to state 21


state 13

    (16) smp_type -> INT .

    ID              reduce using rule 16 (smp_type -> INT .)
    LCURLY          reduce using rule 16 (smp_type -> INT .)


state 14

    (17) smp_type -> FLOAT .

    ID              reduce using rule 17 (smp_type -> FLOAT .)
    LCURLY          reduce using rule 17 (smp_type -> FLOAT .)


state 15

    (18) smp_type -> CHAR .

    ID              reduce using rule 18 (smp_type -> CHAR .)
    LCURLY          reduce using rule 18 (smp_type -> CHAR .)


state 16

    (19) sp_type -> FILE .

    ID              reduce using rule 19 (sp_type -> FILE .)


state 17

    (1) prog -> prog1 prog2 MAIN . LPAREN RPAREN LCURLY block RCURLY

    LPAREN          shift and go to state 22


state 18

    (4) prog2 -> function prog2 .

    MAIN            reduce using rule 4 (prog2 -> function prog2 .)


state 19

    (20) function -> FUNC ID . LPAREN param RPAREN ARROW smp_type LCURLY function1 block RETURN exp SEMICOL RCURLY
    (21) function -> FUNC ID . LPAREN param RPAREN ARROW VOID LCURLY function1 block RCURLY

    LPAREN          shift and go to state 23


state 20

    (7) dec_vars1 -> smp_type ID . LBRACKET exp RBRACKET dec_vars3 SEMICOL dec_vars4
    (8) dec_vars1 -> smp_type ID . dec_vars2 SEMICOL dec_vars4
    (10) dec_vars2 -> . COMMA ID dec_vars2
    (11) dec_vars2 -> . empty
    (119) empty -> .

    LBRACKET        shift and go to state 24
    COMMA           shift and go to state 26
    SEMICOL         reduce using rule 119 (empty -> .)

    dec_vars2                      shift and go to state 25
    empty                          shift and go to state 27

state 21

    (9) dec_vars1 -> sp_type ID . dec_vars2 SEMICOL dec_vars4
    (10) dec_vars2 -> . COMMA ID dec_vars2
    (11) dec_vars2 -> . empty
    (119) empty -> .

    COMMA           shift and go to state 26
    SEMICOL         reduce using rule 119 (empty -> .)

    dec_vars2                      shift and go to state 28
    empty                          shift and go to state 27

state 22

    (1) prog -> prog1 prog2 MAIN LPAREN . RPAREN LCURLY block RCURLY

    RPAREN          shift and go to state 29


state 23

    (20) function -> FUNC ID LPAREN . param RPAREN ARROW smp_type LCURLY function1 block RETURN exp SEMICOL RCURLY
    (21) function -> FUNC ID LPAREN . param RPAREN ARROW VOID LCURLY function1 block RCURLY
    (24) param -> . smp_type ID param1
    (25) param -> . empty
    (16) smp_type -> . INT
    (17) smp_type -> . FLOAT
    (18) smp_type -> . CHAR
    (119) empty -> .

    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15
    RPAREN          reduce using rule 119 (empty -> .)

    param                          shift and go to state 30
    smp_type                       shift and go to state 31
    empty                          shift and go to state 32

state 24

    (7) dec_vars1 -> smp_type ID LBRACKET . exp RBRACKET dec_vars3 SEMICOL dec_vars4
    (92) exp -> . t_exp exp1
    (95) t_exp -> . g_exp t_exp1
    (98) g_exp -> . m_exp g_exp1
    (106) m_exp -> . term m_exp1
    (110) term -> . factor term1
    (114) factor -> . LPAREN exp RPAREN
    (115) factor -> . variable
    (116) factor -> . std_func
    (117) factor -> . CTE_INT
    (118) factor -> . CTE_FLOAT
    (30) variable -> . ID variable1
    (59) std_func -> . ID LPAREN std_func1 RPAREN

    LPAREN          shift and go to state 40
    CTE_INT         shift and go to state 43
    CTE_FLOAT       shift and go to state 44
    ID              shift and go to state 33

    exp                            shift and go to state 34
    t_exp                          shift and go to state 35
    g_exp                          shift and go to state 36
    m_exp                          shift and go to state 37
    term                           shift and go to state 38
    factor                         shift and go to state 39
    variable                       shift and go to state 41
    std_func                       shift and go to state 42

state 25

    (8) dec_vars1 -> smp_type ID dec_vars2 . SEMICOL dec_vars4

    SEMICOL         shift and go to state 45


state 26

    (10) dec_vars2 -> COMMA . ID dec_vars2

    ID              shift and go to state 46


state 27

    (11) dec_vars2 -> empty .

    SEMICOL         reduce using rule 11 (dec_vars2 -> empty .)


state 28

    (9) dec_vars1 -> sp_type ID dec_vars2 . SEMICOL dec_vars4

    SEMICOL         shift and go to state 47


state 29

    (1) prog -> prog1 prog2 MAIN LPAREN RPAREN . LCURLY block RCURLY

    LCURLY          shift and go to state 48


state 30

    (20) function -> FUNC ID LPAREN param . RPAREN ARROW smp_type LCURLY function1 block RETURN exp SEMICOL RCURLY
    (21) function -> FUNC ID LPAREN param . RPAREN ARROW VOID LCURLY function1 block RCURLY

    RPAREN          shift and go to state 49


state 31

    (24) param -> smp_type . ID param1

    ID              shift and go to state 50


state 32

    (25) param -> empty .

    RPAREN          reduce using rule 25 (param -> empty .)


state 33

    (30) variable -> ID . variable1
    (59) std_func -> ID . LPAREN std_func1 RPAREN
    (31) variable1 -> . LBRACKET exp RBRACKET variable2
    (32) variable1 -> . empty
    (119) empty -> .

    LPAREN          shift and go to state 52
    LBRACKET        shift and go to state 53
    TIMES           reduce using rule 119 (empty -> .)
    DIVIDE          reduce using rule 119 (empty -> .)
    PLUS            reduce using rule 119 (empty -> .)
    MINUS           reduce using rule 119 (empty -> .)
    GT              reduce using rule 119 (empty -> .)
    LT              reduce using rule 119 (empty -> .)
    GE              reduce using rule 119 (empty -> .)
    LE              reduce using rule 119 (empty -> .)
    EQ              reduce using rule 119 (empty -> .)
    NE              reduce using rule 119 (empty -> .)
    AND             reduce using rule 119 (empty -> .)
    OR              reduce using rule 119 (empty -> .)
    RBRACKET        reduce using rule 119 (empty -> .)
    RPAREN          reduce using rule 119 (empty -> .)
    COMMA           reduce using rule 119 (empty -> .)
    SEMICOL         reduce using rule 119 (empty -> .)

    variable1                      shift and go to state 51
    empty                          shift and go to state 54

state 34

    (7) dec_vars1 -> smp_type ID LBRACKET exp . RBRACKET dec_vars3 SEMICOL dec_vars4

    RBRACKET        shift and go to state 55


state 35

    (92) exp -> t_exp . exp1
    (93) exp1 -> . OR exp
    (94) exp1 -> . empty
    (119) empty -> .

    OR              shift and go to state 57
    RBRACKET        reduce using rule 119 (empty -> .)
    RPAREN          reduce using rule 119 (empty -> .)
    COMMA           reduce using rule 119 (empty -> .)
    SEMICOL         reduce using rule 119 (empty -> .)

    exp1                           shift and go to state 56
    empty                          shift and go to state 58

state 36

    (95) t_exp -> g_exp . t_exp1
    (96) t_exp1 -> . AND t_exp
    (97) t_exp1 -> . empty
    (119) empty -> .

    AND             shift and go to state 60
    OR              reduce using rule 119 (empty -> .)
    RBRACKET        reduce using rule 119 (empty -> .)
    RPAREN          reduce using rule 119 (empty -> .)
    COMMA           reduce using rule 119 (empty -> .)
    SEMICOL         reduce using rule 119 (empty -> .)

    t_exp1                         shift and go to state 59
    empty                          shift and go to state 61

state 37

    (98) g_exp -> m_exp . g_exp1
    (99) g_exp1 -> . GT m_exp
    (100) g_exp1 -> . LT m_exp
    (101) g_exp1 -> . GE m_exp
    (102) g_exp1 -> . LE m_exp
    (103) g_exp1 -> . EQ m_exp
    (104) g_exp1 -> . NE m_exp
    (105) g_exp1 -> . empty
    (119) empty -> .

    GT              shift and go to state 63
    LT              shift and go to state 64
    GE              shift and go to state 65
    LE              shift and go to state 66
    EQ              shift and go to state 67
    NE              shift and go to state 68
    AND             reduce using rule 119 (empty -> .)
    OR              reduce using rule 119 (empty -> .)
    RBRACKET        reduce using rule 119 (empty -> .)
    RPAREN          reduce using rule 119 (empty -> .)
    COMMA           reduce using rule 119 (empty -> .)
    SEMICOL         reduce using rule 119 (empty -> .)

    g_exp1                         shift and go to state 62
    empty                          shift and go to state 69

state 38

    (106) m_exp -> term . m_exp1
    (107) m_exp1 -> . PLUS m_exp
    (108) m_exp1 -> . MINUS m_exp
    (109) m_exp1 -> . empty
    (119) empty -> .

    PLUS            shift and go to state 71
    MINUS           shift and go to state 72
    GT              reduce using rule 119 (empty -> .)
    LT              reduce using rule 119 (empty -> .)
    GE              reduce using rule 119 (empty -> .)
    LE              reduce using rule 119 (empty -> .)
    EQ              reduce using rule 119 (empty -> .)
    NE              reduce using rule 119 (empty -> .)
    AND             reduce using rule 119 (empty -> .)
    OR              reduce using rule 119 (empty -> .)
    RBRACKET        reduce using rule 119 (empty -> .)
    RPAREN          reduce using rule 119 (empty -> .)
    COMMA           reduce using rule 119 (empty -> .)
    SEMICOL         reduce using rule 119 (empty -> .)

    m_exp1                         shift and go to state 70
    empty                          shift and go to state 73

state 39

    (110) term -> factor . term1
    (111) term1 -> . TIMES term
    (112) term1 -> . DIVIDE term
    (113) term1 -> . empty
    (119) empty -> .

    TIMES           shift and go to state 75
    DIVIDE          shift and go to state 76
    PLUS            reduce using rule 119 (empty -> .)
    MINUS           reduce using rule 119 (empty -> .)
    GT              reduce using rule 119 (empty -> .)
    LT              reduce using rule 119 (empty -> .)
    GE              reduce using rule 119 (empty -> .)
    LE              reduce using rule 119 (empty -> .)
    EQ              reduce using rule 119 (empty -> .)
    NE              reduce using rule 119 (empty -> .)
    AND             reduce using rule 119 (empty -> .)
    OR              reduce using rule 119 (empty -> .)
    RBRACKET        reduce using rule 119 (empty -> .)
    RPAREN          reduce using rule 119 (empty -> .)
    COMMA           reduce using rule 119 (empty -> .)
    SEMICOL         reduce using rule 119 (empty -> .)

    term1                          shift and go to state 74
    empty                          shift and go to state 77

state 40

    (114) factor -> LPAREN . exp RPAREN
    (92) exp -> . t_exp exp1
    (95) t_exp -> . g_exp t_exp1
    (98) g_exp -> . m_exp g_exp1
    (106) m_exp -> . term m_exp1
    (110) term -> . factor term1
    (114) factor -> . LPAREN exp RPAREN
    (115) factor -> . variable
    (116) factor -> . std_func
    (117) factor -> . CTE_INT
    (118) factor -> . CTE_FLOAT
    (30) variable -> . ID variable1
    (59) std_func -> . ID LPAREN std_func1 RPAREN

    LPAREN          shift and go to state 40
    CTE_INT         shift and go to state 43
    CTE_FLOAT       shift and go to state 44
    ID              shift and go to state 33

    exp                            shift and go to state 78
    t_exp                          shift and go to state 35
    g_exp                          shift and go to state 36
    m_exp                          shift and go to state 37
    term                           shift and go to state 38
    factor                         shift and go to state 39
    variable                       shift and go to state 41
    std_func                       shift and go to state 42

state 41

    (115) factor -> variable .

    TIMES           reduce using rule 115 (factor -> variable .)
    DIVIDE          reduce using rule 115 (factor -> variable .)
    PLUS            reduce using rule 115 (factor -> variable .)
    MINUS           reduce using rule 115 (factor -> variable .)
    GT              reduce using rule 115 (factor -> variable .)
    LT              reduce using rule 115 (factor -> variable .)
    GE              reduce using rule 115 (factor -> variable .)
    LE              reduce using rule 115 (factor -> variable .)
    EQ              reduce using rule 115 (factor -> variable .)
    NE              reduce using rule 115 (factor -> variable .)
    AND             reduce using rule 115 (factor -> variable .)
    OR              reduce using rule 115 (factor -> variable .)
    RBRACKET        reduce using rule 115 (factor -> variable .)
    RPAREN          reduce using rule 115 (factor -> variable .)
    COMMA           reduce using rule 115 (factor -> variable .)
    SEMICOL         reduce using rule 115 (factor -> variable .)


state 42

    (116) factor -> std_func .

    TIMES           reduce using rule 116 (factor -> std_func .)
    DIVIDE          reduce using rule 116 (factor -> std_func .)
    PLUS            reduce using rule 116 (factor -> std_func .)
    MINUS           reduce using rule 116 (factor -> std_func .)
    GT              reduce using rule 116 (factor -> std_func .)
    LT              reduce using rule 116 (factor -> std_func .)
    GE              reduce using rule 116 (factor -> std_func .)
    LE              reduce using rule 116 (factor -> std_func .)
    EQ              reduce using rule 116 (factor -> std_func .)
    NE              reduce using rule 116 (factor -> std_func .)
    AND             reduce using rule 116 (factor -> std_func .)
    OR              reduce using rule 116 (factor -> std_func .)
    RBRACKET        reduce using rule 116 (factor -> std_func .)
    RPAREN          reduce using rule 116 (factor -> std_func .)
    COMMA           reduce using rule 116 (factor -> std_func .)
    SEMICOL         reduce using rule 116 (factor -> std_func .)


state 43

    (117) factor -> CTE_INT .

    TIMES           reduce using rule 117 (factor -> CTE_INT .)
    DIVIDE          reduce using rule 117 (factor -> CTE_INT .)
    PLUS            reduce using rule 117 (factor -> CTE_INT .)
    MINUS           reduce using rule 117 (factor -> CTE_INT .)
    GT              reduce using rule 117 (factor -> CTE_INT .)
    LT              reduce using rule 117 (factor -> CTE_INT .)
    GE              reduce using rule 117 (factor -> CTE_INT .)
    LE              reduce using rule 117 (factor -> CTE_INT .)
    EQ              reduce using rule 117 (factor -> CTE_INT .)
    NE              reduce using rule 117 (factor -> CTE_INT .)
    AND             reduce using rule 117 (factor -> CTE_INT .)
    OR              reduce using rule 117 (factor -> CTE_INT .)
    RBRACKET        reduce using rule 117 (factor -> CTE_INT .)
    RPAREN          reduce using rule 117 (factor -> CTE_INT .)
    COMMA           reduce using rule 117 (factor -> CTE_INT .)
    SEMICOL         reduce using rule 117 (factor -> CTE_INT .)


state 44

    (118) factor -> CTE_FLOAT .

    TIMES           reduce using rule 118 (factor -> CTE_FLOAT .)
    DIVIDE          reduce using rule 118 (factor -> CTE_FLOAT .)
    PLUS            reduce using rule 118 (factor -> CTE_FLOAT .)
    MINUS           reduce using rule 118 (factor -> CTE_FLOAT .)
    GT              reduce using rule 118 (factor -> CTE_FLOAT .)
    LT              reduce using rule 118 (factor -> CTE_FLOAT .)
    GE              reduce using rule 118 (factor -> CTE_FLOAT .)
    LE              reduce using rule 118 (factor -> CTE_FLOAT .)
    EQ              reduce using rule 118 (factor -> CTE_FLOAT .)
    NE              reduce using rule 118 (factor -> CTE_FLOAT .)
    AND             reduce using rule 118 (factor -> CTE_FLOAT .)
    OR              reduce using rule 118 (factor -> CTE_FLOAT .)
    RBRACKET        reduce using rule 118 (factor -> CTE_FLOAT .)
    RPAREN          reduce using rule 118 (factor -> CTE_FLOAT .)
    COMMA           reduce using rule 118 (factor -> CTE_FLOAT .)
    SEMICOL         reduce using rule 118 (factor -> CTE_FLOAT .)


state 45

    (8) dec_vars1 -> smp_type ID dec_vars2 SEMICOL . dec_vars4
    (14) dec_vars4 -> . dec_vars
    (15) dec_vars4 -> . empty
    (6) dec_vars -> . VAR dec_vars1
    (119) empty -> .

    VAR             shift and go to state 5
    FUNC            reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)
    INPUT           reduce using rule 119 (empty -> .)
    PRINT           reduce using rule 119 (empty -> .)
    IF              reduce using rule 119 (empty -> .)
    FOR             reduce using rule 119 (empty -> .)
    WHILE           reduce using rule 119 (empty -> .)
    ID              reduce using rule 119 (empty -> .)
    GENERATE_KEY    reduce using rule 119 (empty -> .)
    OPEN            reduce using rule 119 (empty -> .)
    READ            reduce using rule 119 (empty -> .)
    WRITE           reduce using rule 119 (empty -> .)
    CLOSE           reduce using rule 119 (empty -> .)
    ENCRYPT         reduce using rule 119 (empty -> .)
    DECRYPT         reduce using rule 119 (empty -> .)
    HASH_SHA256     reduce using rule 119 (empty -> .)
    HASH_MD5        reduce using rule 119 (empty -> .)
    RETURN          reduce using rule 119 (empty -> .)
    RCURLY          reduce using rule 119 (empty -> .)

    dec_vars4                      shift and go to state 79
    dec_vars                       shift and go to state 80
    empty                          shift and go to state 81

state 46

    (10) dec_vars2 -> COMMA ID . dec_vars2
    (10) dec_vars2 -> . COMMA ID dec_vars2
    (11) dec_vars2 -> . empty
    (119) empty -> .

    COMMA           shift and go to state 26
    SEMICOL         reduce using rule 119 (empty -> .)

    dec_vars2                      shift and go to state 82
    empty                          shift and go to state 27

state 47

    (9) dec_vars1 -> sp_type ID dec_vars2 SEMICOL . dec_vars4
    (14) dec_vars4 -> . dec_vars
    (15) dec_vars4 -> . empty
    (6) dec_vars -> . VAR dec_vars1
    (119) empty -> .

    VAR             shift and go to state 5
    FUNC            reduce using rule 119 (empty -> .)
    MAIN            reduce using rule 119 (empty -> .)
    INPUT           reduce using rule 119 (empty -> .)
    PRINT           reduce using rule 119 (empty -> .)
    IF              reduce using rule 119 (empty -> .)
    FOR             reduce using rule 119 (empty -> .)
    WHILE           reduce using rule 119 (empty -> .)
    ID              reduce using rule 119 (empty -> .)
    GENERATE_KEY    reduce using rule 119 (empty -> .)
    OPEN            reduce using rule 119 (empty -> .)
    READ            reduce using rule 119 (empty -> .)
    WRITE           reduce using rule 119 (empty -> .)
    CLOSE           reduce using rule 119 (empty -> .)
    ENCRYPT         reduce using rule 119 (empty -> .)
    DECRYPT         reduce using rule 119 (empty -> .)
    HASH_SHA256     reduce using rule 119 (empty -> .)
    HASH_MD5        reduce using rule 119 (empty -> .)
    RETURN          reduce using rule 119 (empty -> .)
    RCURLY          reduce using rule 119 (empty -> .)

    dec_vars4                      shift and go to state 83
    dec_vars                       shift and go to state 80
    empty                          shift and go to state 81

state 48
